version/1.7/_sources/api/_autosummary/ansys.optislang.core.nodes.ProxySolverNode.rst.txt
ProxySolverNode
===============

.. currentmodule:: ansys.optislang.core.nodes

.. autoclass:: ProxySolverNode

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      ProxySolverNode.assign_placeholder
      
      
      ProxySolverNode.control
      
      
      ProxySolverNode.copy
      
      
      ProxySolverNode.create_input_slot
      
      
      ProxySolverNode.create_output_slot
      
      
      ProxySolverNode.create_placeholder_from_property
      
      
      ProxySolverNode.delete
      
      
      ProxySolverNode.exists
      
      
      ProxySolverNode.get_ancestors
      
      
      ProxySolverNode.get_available_input_locations
      
      
      ProxySolverNode.get_available_output_locations
      
      
      ProxySolverNode.get_connections
      
      
      ProxySolverNode.get_designs
      
      
      ProxySolverNode.get_execution_options
      
      
      ProxySolverNode.get_hpc_licensing_forwarded_environment
      
      
      ProxySolverNode.get_input_slot_value
      
      
      ProxySolverNode.get_input_slots
      
      
      ProxySolverNode.get_internal_variables
      
      
      ProxySolverNode.get_name
      
      
      ProxySolverNode.get_output_slot_value
      
      
      ProxySolverNode.get_output_slots
      
      
      ProxySolverNode.get_parent
      
      
      ProxySolverNode.get_parent_name
      
      
      ProxySolverNode.get_properties
      
      
      ProxySolverNode.get_property
      
      
      ProxySolverNode.get_registered_files
      
      
      ProxySolverNode.get_registered_input_slots
      
      
      ProxySolverNode.get_registered_output_slots
      
      
      ProxySolverNode.get_registered_parameters
      
      
      ProxySolverNode.get_registered_responses
      
      
      ProxySolverNode.get_result_files
      
      
      ProxySolverNode.get_states_ids
      
      
      ProxySolverNode.get_status
      
      
      ProxySolverNode.load
      
      
      ProxySolverNode.move_to
      
      
      ProxySolverNode.re_register_locations_as_parameter
      
      
      ProxySolverNode.re_register_locations_as_response
      
      
      ProxySolverNode.register_location_as_input_slot
      
      
      ProxySolverNode.register_location_as_internal_variable
      
      
      ProxySolverNode.register_location_as_output_slot
      
      
      ProxySolverNode.register_location_as_parameter
      
      
      ProxySolverNode.register_location_as_response
      
      
      ProxySolverNode.register_locations_as_parameter
      
      
      ProxySolverNode.register_locations_as_response
      
      
      ProxySolverNode.remove_all_input_slots
      
      
      ProxySolverNode.remove_all_internal_variables
      
      
      ProxySolverNode.remove_all_output_slots
      
      
      ProxySolverNode.remove_all_parameters
      
      
      ProxySolverNode.remove_all_responses
      
      
      ProxySolverNode.remove_input_slot
      
      
      ProxySolverNode.remove_internal_variable
      
      
      ProxySolverNode.remove_output_slot
      
      
      ProxySolverNode.remove_parameter
      
      
      ProxySolverNode.remove_response
      
      
      ProxySolverNode.set_designs
      
      
      ProxySolverNode.set_execution_options
      
      
      ProxySolverNode.set_name
      
      
      ProxySolverNode.set_properties
      
      
      ProxySolverNode.set_property
      
      
      ProxySolverNode.supports
      
      
      ProxySolverNode.unassign_placeholder
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ProxySolverNode.type
      ProxySolverNode.uid
   
   